--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babelify": "^7.3.0",
+    "bower": "^1.8.0",
     "browserify": "^14.3.0",
+    "deepmerge": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
