--- a/src/bower.json
+++ b/src/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "src",
   "authors": [
-    "aaronhall <adhall@gmail.com>"
+    "Aaron"
   ],
   "description": "",
   "main": "",
@@ -16,9 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.2.1"
   },
   "devDependencies": {
-    "react": "^15.5.4"
   }
 }
